fix: tweak .heading-1 letter-spacing

--- a/christmas-shop/src/scss/base/_base.scss
+++ b/christmas-shop/src/scss/base/_base.scss
@@ -56,7 +56,7 @@ body {
 .heading-1 {
   font-size: abstract_global.rem(32px);
   line-height: 150%;
-  letter-spacing: 5.75px;
+  letter-spacing: 5.59px;
 }
 .heading-2,
 .action-large {
